# xorshift-PRNGs

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  benchmark.cpp  results.txt  xorshift.h
src/: xorshift.h  xorshift.hpp
